--- a/lab1/src/main/res/values/strings.xml
+++ b/lab1/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">NTHGiang</string>
+    <string name="app_name">Giang</string>
     <string name="roll_label">Roll</string>
     <string name="reset_label">Reset</string>
 </resources>
